CIV-7814: Upgrade appinsignt v3 and Java 17 (#2737)